<resources>
    <string name="app_name">BakeryApp</string>
    <string name="title">My Backery</string>
    <string name="goods_list">Goods list</string>
    <string name="cupcake_constructor">Cupcake constructor</string>
    <string name="cake_constructor">Cake constructor</string>
    <string name="add_temporary_good">Add a temporary good</string>
    <string name="add">Add</string>
    <string name="temporary_list">Temporary goods</string>
    <string name="components_list">Components list</string>
    <string name="products_list">Product list</string>

    <string name="search">search...</string>

    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="price1piece">Price</string>
    <string name="total_price">Total</string>

    <string name="quantity">Quantity</string>
    <string name="diameter">Diameter</string>
    <string name="layer">Layers</string>
    <string name="sponge_cake">Sponge cake</string>
    <string name="filling">Filling</string>
    <string name="cream">Cream</string>

    <string name="quantity_input">Input quantity</string>
    <string name="diameter_input">Input diameter</string>
    <string name="layer_input">Input layer quantity</string>
    <string name="sponge_cake_choice">Сhoose sponge cake</string>
    <string name="filling_choice">Choose filling</string>
    <string name="cream_choice">Choose cream</string>

    <string name="cupcake">Cupcake</string>
    <string name="cake">Сake</string>

    <string name="ingredient">Ingredient</string>
    <string name="receipt">Reciept</string>

    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no products</string>
    <string name="error_loading">Something went wrong. Try again later</string>
</resources>