<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.BakeryApp"
    app:layout_constraintBottom_toTopOf="@id/bottom_barrier"
    tools:context=".activity.MenuFragment">


    <TextView
        android:id="@+id/title"
        style="@style/title_text"
        android:text="@string/title"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="title"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/good_list_button"
        style="@style/list_item_text"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/goods_list"
        app:layout_constraintTop_toTopOf="@id/title_barrier"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/temporary_list_button"
        style="@style/list_item_text"
        android:text="@string/temporary_list"
        app:layout_constraintTop_toBottomOf="@id/good_list_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/component_list_button"
        style="@style/list_item_text"
        android:text="@string/components_list"
        app:layout_constraintTop_toBottomOf="@id/temporary_list_button"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/product_list_button"
        style="@style/list_item_text"
        android:text="@string/products_list"
        app:layout_constraintTop_toBottomOf="@id/component_list_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cupcake_constructor_button"
        style="@style/list_item_text"
        android:text="@string/cupcake_constructor"
        app:layout_constraintTop_toBottomOf="@id/product_list_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cake_constructor_button"
        style="@style/list_item_text"
        android:text="@string/cake_constructor"
        app:layout_constraintTop_toBottomOf="@id/cupcake_constructor_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add_temporary_button"
        style="@style/list_item_text"
        android:text="@string/add_temporary_good"
        app:layout_constraintTop_toBottomOf="@id/cake_constructor_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add"
        style="@style/list_item_text"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/add_temporary_button"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:barrierDirection="top"
        app:constraint_referenced_ids="view_bottom, cake_image, cake_image1, cake_image2, cake_image3"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:theme="@style/theme.BakeryApp.titles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/cake_image" />


    <ImageView
        android:id="@+id/cake_image"
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:layout_marginBottom="@dimen/min_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cake_image1"
        app:layout_constraintHorizontal_bias="0.5"
        android:theme="@style/theme.BakeryApp.titles"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/view_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cake"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cake_image1"
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:layout_marginBottom="@dimen/min_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cake_image2"
        app:layout_constraintHorizontal_bias="0.5"
        android:theme="@style/theme.BakeryApp.titles"
        app:layout_constraintStart_toEndOf="@+id/cake_image"
        app:srcCompat="@drawable/cake3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cake_image2"
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:layout_marginBottom="@dimen/min_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cake_image3"
        app:layout_constraintHorizontal_bias="0.5"
        android:theme="@style/theme.BakeryApp.titles"
        app:layout_constraintStart_toEndOf="@+id/cake_image1"
        app:srcCompat="@drawable/cake2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/cake_image3"
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:layout_marginBottom="@dimen/min_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:theme="@style/theme.BakeryApp.titles"
        app:layout_constraintStart_toEndOf="@+id/cake_image2"
        app:srcCompat="@drawable/cake1"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>